# lol-html

./: Cargo.toml
fuzz/: Cargo.toml
fuzz/test_case/: Cargo.toml
fuzz/test_case/src/: lib.rs
scripts/: test.sh
src/: lib.rs
src/base/: debug_trace.rs  mod.rs
src/html/: text_type.rs
src/parser/: mod.rs
src/rewritable_units/tokens/: doctype.rs
src/rewriter/: rewrite_controller.rs
src/selectors_vm/: ast.rs  compiler.rs  mod.rs  program.rs  stack.rs
src/transform_stream/: mod.rs
tests/harness/suites/: selectors_tests.rs
tests/harness/suites/html5lib_tests/: test_token.rs
tests/harness/suites/html5lib_tests/feedback_tests/: expected_tokens.rs  mod.rs
