[package]
name = "lol_html"
version = "2.7.0"
authors = ["Ivan Nikulin <inikulin@cloudflare.com, ifaaan@gmail.com>"]
license = "BSD-3-Clause"
description = "Streaming HTML rewriter/parser with CSS selector-based API"
repository = "https://github.com/cloudflare/lol-html"
documentation = "https://docs.rs/lol-html"
categories = ["parser-implementations", "web-programming"]
keywords = ["html", "css-selectors", "parser", "rewriter", "streaming"]
readme = "README.md"
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/media", "/src"]
edition = "2021"
rust-version = "1.80"

[lib]
bench = false

[features]
debug_trace = []

[[bench]]
harness = false
name = "bench"

[dependencies]
rustc-hash = "2.1.1"
bitflags = "2.9.1"
cssparser = "0.36"
encoding_rs = "0.8.35"
memchr = "2.7.5"
mime = "0.3.17"
selectors = "0.33"
thiserror = "2.0"
precomputed-hash = "0.1.1"

[dev-dependencies]
criterion = "0.8.1"
glob = "0.3.2"
static_assertions = "1.1.0"
itertools = "0.14"

[lints.rust]
keyword_idents = { level = "deny", priority = 1 }
for_loops_over_fallibles = "deny"
unit_bindings = "deny"
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unused_qualifications = "warn"
